test/error/parser/type-annotation-unknown.dsk
let x: 42 = 1
echo(x)
